improved configuration handling, merged on/off switching into single script.

--- a/sample.conf
+++ b/sample.conf
@@ -10,3 +10,8 @@ sunday = 90
 [fetch]
 #url = "ENTER_URL_AND_UNCOMMENT"
 country_code = "EE"
+
+[hardware]
+switch_pin = 26
+reverse_polarity = true
+
