tested on raspberry pi. Added required config keys to sample configuation.

--- a/sample.conf
+++ b/sample.conf
@@ -1,17 +1,21 @@
 [heating-schedule]
-monday = 90
-tuesday = 70
+monday = 60
+tuesday = 60
 wednesday = 60
-thursday = 45
-friday = 90
-saturday = 250
-sunday = 90
+thursday = 60
+friday = 60
+saturday = 60
+sunday = 60
 
 [fetch]
-#url = "ENTER_URL_AND_UNCOMMENT"
+#url = "ADD MARKET API URL HERE"
 country_code = "EE"
 
 [hardware]
-switch_pin = 26
-reverse_polarity = true
+#switch_pin = ADD SWITCH GPIO PIN HERE
+reverse_polarity = false
+
+[logging]
+fetch_logfile = 'fetch.log'
+switch_logfile = 'switch.log'
 
