Testing. Fixed problems with working directory being used instead of configured absolute. Project should now be functionally complete.

--- a/sample_conf.toml
+++ b/sample_conf.toml
@@ -42,6 +42,7 @@ python = 'python3'
 # using 'at' to schedule other stuff on your system, this can be left
 # as 'a'.
 switch_queue = 'a'
+script_dir = "ADD INSTALLATION DIRECTORY HERE"
 
 [logging]
 # filepath for where to store logs from the fetch script.
